--- a/PogoLocationFeeder.GUI/Views/MainView.xaml
+++ b/PogoLocationFeeder.GUI/Views/MainView.xaml
@@ -6,8 +6,6 @@
     xmlns:viewmodels="clr-namespace:PogoLocationFeeder.GUI.ViewModels"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:converters="clr-namespace:MaterialDesignThemes.Wpf.Converters;assembly=MaterialDesignThemes.Wpf"
-    xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=System"
-    xmlns:views="clr-namespace:PogoLocationFeeder.GUI.Views"
     x:Class="PogoLocationFeeder.GUI.Views.MainView"
     mc:Ignorable="d"
     d:DesignHeight="300" d:DesignWidth="800"
@@ -16,12 +14,10 @@
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </UserControl.Resources>
     <Grid>
-        <DataGrid x:Name="dataGrid" ItemsSource="{Binding Pokemons}" AutoGenerateColumns="False"
-                  SelectionMode="Single" VerticalContentAlignment="Center" IsReadOnly="True" Background="Transparent"
-                  >
+        <DataGrid x:Name="DataGrid" ItemsSource="{Binding Pokemons}" AutoGenerateColumns="False"
+                  SelectionMode="Single" VerticalContentAlignment="Center" IsReadOnly="True" Background="Transparent">
             <DataGrid.Resources>
                 <viewmodels:BindingProxy x:Key="proxy" Data="{Binding}"/>
-
             </DataGrid.Resources>
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
@@ -76,16 +72,47 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Binding="{Binding Server}" Header="Server" />
-                <DataGridTextColumn Binding="{Binding Channel}" Header="Channel" />
-                <DataGridTextColumn Binding="{Binding Pokemon}" Header="Name"/>
-                <DataGridTextColumn Binding="{Binding IV}" Header="IV" SortMemberPath="Info.IV" />
-                <DataGridTextColumn Binding="{Binding Move1}" Header="Move1" />
-                <DataGridTextColumn Binding="{Binding Move2}" Header="Move2" />
+                <DataGridTextColumn Binding="{Binding Info.Id}" Header="Name" />
+                <DataGridTextColumn Binding="{Binding Date}" Header="Expiration" />
+                <DataGridTextColumn Binding="{Binding IV}" Header="IV" />
                 <DataGridTextColumn Binding="{Binding Info.Latitude}" Header="Latitude" />
                 <DataGridTextColumn Binding="{Binding Info.Longitude}" Header="Longitude" />
-                <DataGridTextColumn Binding="{Binding Date}" Header="Expiration" />
+                <DataGridTextColumn Binding="{Binding Info.Move1}" Header="Move1" />
+                <DataGridTextColumn Binding="{Binding Info.Move2}" Header="Move2" />
+                <DataGridTextColumn Binding="{Binding Server}" Header="Server" />
+                <DataGridTextColumn Binding="{Binding Channel}" Header="Channel" />
             </DataGrid.Columns>
         </DataGrid>
+        <!--<ListBox HorizontalContentAlignment="Stretch" ItemsSource="{Binding Pokemons}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="40"/>
+                                <ColumnDefinition Width="2*"/>
+                                <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="4*"/>
+                            <ColumnDefinition Width="3*"/>
+                            </Grid.ColumnDefinitions>
+                        <Image Source="{Binding Icon}" Grid.Column="0"/>
+                        <TextBlock Text="{Binding Id}" Grid.Column="1" VerticalAlignment="Center"/>
+                        <TextBlock Grid.Column="2" VerticalAlignment="Center">
+                             <Run Text="IV: "></Run>
+                             <Run Text="{Binding IV}"></Run>
+                             <Run Text="%"></Run>
+                         </TextBlock>
+                        <TextBlock Grid.Column="3" VerticalAlignment="Center">
+                             <Run Text="lat: "></Run>
+                             <Run Text="{Binding Latitude}"></Run>
+                             <Run Text=" "></Run>
+                             <Run Text="lng: "></Run>
+                             <Run Text="{Binding Longitude}"></Run>
+                        </TextBlock>
+                        <TextBlock Text="{Binding ExpirationTimestamp}" Grid.Column="4" VerticalAlignment="Center"/>
+
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>-->
     </Grid>
 </UserControl>
